View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0027086 | Open CASCADE | OCCT:Samples | public | 2016-01-18 12:54 | 2016-04-20 15:50 |
Reporter | kgv | Assigned To | |||
Priority | normal | Severity | trivial | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.8.0 | ||||
Target Version | 7.0.0 | Fixed in Version | 7.0.0 | ||
Summary | 0027086: Samples, jniviewer - avoid duplicating viewer redraws | ||||
Description | It is better to avoid redundant viewer updates within GLSurfaceView::RENDERMODE_CONTINUOUSLY mode. | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | |||||
|
Branch CR27086 has been created by kgv. SHA-1: 9f018bdaf480c09e78b7f4c422e45de6598aac71 Detailed log of new commits: Author: kgv Date: Mon Jan 18 12:57:23 2016 +0300 0027086: Samples, jniviewer - avoid duplicating viewer redraws |
|
Dear bugmaster, please take the patch for the sample, testing is not needed. |
|
Branch CR27086 has been deleted by kgv. SHA-1: 9f018bdaf480c09e78b7f4c422e45de6598aac71 |
Date Modified | Username | Field | Change |
---|---|---|---|
2016-01-18 12:54 | kgv | New Issue | |
2016-01-18 12:54 | kgv | Assigned To | => bugmaster |
2016-01-18 12:55 | kgv | Assigned To | bugmaster => kgv |
2016-01-18 12:55 | kgv | Status | new => assigned |
2016-01-18 12:59 | git | Note Added: 0049902 | |
2016-01-18 12:59 | kgv | Target Version | 7.0.0 => 7.1.0 |
2016-02-12 17:05 | kgv | Note Added: 0050698 | |
2016-02-12 17:05 | kgv | Assigned To | kgv => bugmaster |
2016-02-12 17:05 | kgv | Status | assigned => resolved |
2016-02-12 17:05 | kgv | Target Version | 7.1.0 => 7.0.0 |
2016-02-12 17:05 | kgv | Severity | minor => trivial |
2016-02-12 17:05 | kgv | Status | resolved => reviewed |
2016-02-15 14:59 | bugmaster | Status | reviewed => tested |
2016-02-21 08:52 |
|
Changeset attached | => occt master c10c6ccd |
2016-02-21 08:52 |
|
Assigned To | bugmaster => abv |
2016-02-21 08:52 |
|
Status | tested => verified |
2016-02-21 08:52 |
|
Resolution | open => fixed |
2016-04-17 13:27 | git | Note Added: 0052868 | |
2016-04-20 15:43 |
|
Fixed in Version | => 7.0.0 |
2016-04-20 15:50 |
|
Status | verified => closed |