0027086: Samples, jniviewer - avoid duplicating viewer redraws